--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -9,9 +9,6 @@
 		<section id="endnotes" epub:type="endnotes">
 			<h2 epub:type="title">Endnotes</h2>
 			<ol>
-				<li id="note-87" epub:type="endnote">
-					<p></p>
-				</li>
 				<li id="note-1" epub:type="endnote">
 					<p>That's too much. <a href="chapter-1.xhtml#noteref-1" epub:type="backlink">↩</a></p>
 				</li>
@@ -46,10 +43,10 @@
 					<p>Well! Are you having breakfast this morning? <a href="chapter-5.xhtml#noteref-11" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-12" epub:type="endnote">
-					<p>Resources.<a href="chapter-5.xhtml#noteref-12" epub:type="backlink">↩</a></p>
+					<p>Resources. <a href="chapter-5.xhtml#noteref-12" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-13" epub:type="endnote">
-					<p>How outrageous! … How shameful! This really shows how stupid and wicked this country’s workers are. Exactly like English servants, especially the maids: there is nothing as unbearable as this Sara, for example!<a href="chapter-5.xhtml#noteref-13" epub:type="backlink">↩</a></p>
+					<p>How outrageous! … How shameful! This really shows how stupid and wicked this country’s workers are. Exactly like English servants, especially the maids: there is nothing as unbearable as this Sara, for example! <a href="chapter-5.xhtml#noteref-13" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-14" epub:type="endnote">
 					<p>But she is so insolent! <a href="chapter-5.xhtml#noteref-14" epub:type="backlink">↩</a></p>
@@ -124,7 +121,7 @@
 					<p>Fie, then! How childish! <a href="chapter-6.xhtml#noteref-37" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-38" epub:type="endnote">
-					<p><blockquote epub:type="z3998:poem">
+					<blockquote epub:type="z3998:poem">
 						<p>
 							<span>“The voyage of life is but begun for me,</span>
 							<br/>
@@ -149,9 +146,12 @@
 							<br/>
 							<span>I have but seen the fires of morning's host;</span>
 							<br/>
-							<span class="i1">Would eve might find me here!”</span><a href="endnotes.xhtml#note-36" id="noteref-36" epub:type="noteref">36</a>
+							<span class="i1">Would eve might find me here!”</span>
 						</p>
-					</blockquote> <a href="chapter-6.xhtml#noteref-36" epub:type="backlink">↩</a></p>
+					</blockquote> 
+					<p>
+						<a href="chapter-6.xhtml#noteref-38" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-39" epub:type="endnote">
 					<p>Pieces of furniture. <a href="chapter-7.xhtml#noteref-39" epub:type="backlink">↩</a></p>
@@ -286,7 +286,7 @@
 					<p>Wild beast. <a href="chapter-29.xhtml#noteref-82" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-83" epub:type="endnote">
-					<p>Find me an English word as good, reader, and I will gladly dispense with the French word. “Reflections” won’t do. <cite>—Author's note</cite><a href="chapter-32.xhtml#noteref-83" epub:type="backlink">↩</a></p>
+					<p>Find me an English word as good, reader, and I will gladly dispense with the French word. “Reflections” won’t do. <cite>—Author's note </cite><a href="chapter-32.xhtml#noteref-83" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-84" epub:type="endnote">
 					<p>Dumbfounded. <a href="chapter-33.xhtml#noteref-84" epub:type="backlink">↩</a></p>
